# python3-setup-ovs

./: .gitignore  README.md  pyproject.toml  setup.py  setup_ovs.py
setup_open_vswitch/: check.py  helpers.py  openflow.py  ovs.py
setup_ovs/: check.py  openflow.py  setup_ovs.py
