# Copyright (C) 2025, RTE (http://www.rte-france.com)
# SPDX-License-Identifier: Apache-2.0

[project]
name = "setup_ovs"
version = "1.0"
description = "Apply an OVS configuration from a JSON file"
authors = [
    { name = "Florent Carli", email = "florent.carli@rte-france.com" },
    { name = "Mathieu Dupré", email = "mathieu.dupre@savoirfairelinux.com" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.6"

[project.scripts]
setup_ovs = "setup_ovs.setup_ovs:main"

[project.urls]
Homepage = "https://github.com/seapath/python3-setup-ovs"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
